--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="row center">
       <div class="col-md-4">
       <h2>Aleja Krasińskiego</h2>
-        <div id="station1" class="stations">
+        <div id="station1" class="stations" data-toggle="popover" data-trigger="hover" title="Parametry" data-content="PM10: PM2.5: NO2: CO:    ">
           <h3></h3>
         </div>
       </div>
@@ -54,7 +54,7 @@
       </div>
       <div class="col-md-4">
         <h2>Os. Piastów</h2>
-        <div id="station3" class="stations">
+        <div id="station3" class="stations" data-toggle="tooltip" data-placement="right">
           <h3></h3>
 
         </div>
