--- a/index.html
+++ b/index.html
@@ -30,16 +30,32 @@
           </div>
         </div>
       </div>
+
       <div class="col-md-4">
         <h2>Bujaka</h2>
         <div id="station2" class="stations">
           <h3></h3>
+          <div class="pop-title">Parametry</div>
+          <div class="pop-content">
+           PM10:<br>
+           PM2.5:<br>
+           NO2:<br>
+           CO:
+           </div>
         </div>
       </div>
+
       <div class="col-md-4">
       <h2>Bulwarowa</h2>
         <div id="station3" class="stations">
           <h3></h3>
+          <div class="pop-title">Parametry</div>
+          <div class="pop-content">
+           PM10:<br>
+           PM2.5:<br>
+           NO2:<br>
+           CO:
+           </div>
         </div>
       </div>
 
@@ -50,20 +66,33 @@
         <h2>Dietla</h2>
         <div id="station1" class="stations">
           <h3></h3>
+           <div class="pop-title">Parametry</div>
+          <div class="pop-content">
+           PM10:<br>
+           PM2.5:<br>
+           </div>
         </div>
       </div>
+
       <div class="col-md-4">
         <h2>Złoty Róg</h2>
         <div id="station2" class="stations">
           <h3></h3>
-
+          <div class="pop-title">Parametry</div>
+          <div class="pop-content">
+           PM10:
+           </div>
         </div>
       </div>
+      
       <div class="col-md-4">
         <h2>Os. Piastów</h2>
         <div id="station3" class="stations" data-toggle="tooltip" data-placement="right">
           <h3></h3>
-
+          <div class="pop-title">Parametry</div>
+          <div class="pop-content">
+           PM10:
+           </div>
         </div>
       </div>
 
