--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="#">Legenda</a></li>
+        <li><a href="legenda.html">Legenda</a></li>
+        <li><a href="sklad.html">Skład smogu</a></li>
         <li><a href="kontakt.html">Kontakt</a></li>
       </ul>
     </div>
