--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.4.5/js/bootstrapvalidator.min.js">
+  
   
 </head>
 <body>
@@ -18,14 +20,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">Smog App</a>
+      <a class="navbar-brand" href="#">SmogApp</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="index.html">Home</a></li>
         <li><a href="legenda.html">Legenda</a></li>
         <li><a href="sklad.html">Skład smogu</a></li>
-        <li><a href="kontakt.html">Kontakt</a></li>
+        <li><a href="https://www.google.com/maps/d/viewer?mid=1Atz3nYrc-9AGbF9AGsaRmgDxZgk&ll=50.05923274313908%2C19.951515200000017&z=14" target="_blank">Mapa stacji</a></li>
+        <li><a href="kontakt.php">Kontakt</a></li>
       </ul>
     </div>
   </div>
@@ -35,7 +38,7 @@
 
 <div class="row center">
       <div class="col-md-4">
-      <h2>Aleja Krasińskiego</h2>
+      <h2 class="nazwa-stacji">Aleja Krasińskiego</h2>
         <div id="station1" class="stations">
           <h3></h3>
           <div class="pop-title">Parametry</div>
