--- a/legenda.html
+++ b/legenda.html
@@ -19,13 +19,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="index.html">Smog App</a>
+      <a class="navbar-brand" href="index.html">SmogApp</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="legenda.html">Legenda</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li class="active"><a href="legenda.html">Legenda</a></li>
         <li><a href="sklad.html">Skład smogu</a></li>
+        <li><a href="https://www.google.com/maps/d/viewer?mid=1Atz3nYrc-9AGbF9AGsaRmgDxZgk&ll=50.05923274313908%2C19.951515200000017&z=14" target="_blank">Mapa stacji</a></li>
         <li><a href="kontakt.html">Kontakt</a></li>
       </ul>
     </div>
